# ChangeLog for dev-python/PyRSS2Gen
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/PyRSS2Gen/ChangeLog,v 1.9 2015/02/01 16:23:57 mrueg Exp $

  01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -PyRSS2Gen-1.0.0.ebuild:
  Remove old.

  30 Sep 2014; Mike Gilbert <floppym@gentoo.org> PyRSS2Gen-1.1.ebuild:
  Cleanup PYTHON_COMPAT, add 3.4.

*PyRSS2Gen-1.1 (30 Sep 2014)

  30 Sep 2014; Ben de Groot <yngwin@gentoo.org> +PyRSS2Gen-1.1.ebuild:
  Non-maintainer commit: version bump requested in bug #505638 six months ago

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> PyRSS2Gen-1.0.0-r1.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> PyRSS2Gen-1.0.0-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*PyRSS2Gen-1.0.0-r1 (10 Feb 2013)

  10 Feb 2013; Mike Gilbert <floppym@gentoo.org> +PyRSS2Gen-1.0.0-r1.ebuild:
  Convert to distutils-r1.

  14 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> PyRSS2Gen-1.0.0.ebuild:
  Add PyPI homepage.

  29 Aug 2011; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Change herd to python

*PyRSS2Gen-1.0.0 (26 Aug 2011)

  26 Aug 2011; Mike Gilbert <floppym@gentoo.org> +PyRSS2Gen-1.0.0.ebuild,
  +metadata.xml:
  Migrate from sunrise; resolves bug 56920 by Jacob Smullyan