@@ -1,6 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST PyRSS2Gen-1.0.0.tar.gz 8819 SHA256 61a15ee50d7bccafb5f6bc2ecc59f18963f45425b3836da637a2121b415ed11e SHA512 0c8dfeed8cff3b1985e439d60083a16515883b2884310df7ea6af6f2f8cb32a5540373413b27ada0a7c5f56692c9cf61be04818d45030f2f888da33848b5a68c WHIRLPOOL 2d842bb9d8cc570dd0dc07ea97ef6081b72044be0cd0be4c45706adc5155ae3244363556c73a01aa24b6608dfa443e185b5f92cadfad2eeac5612cc3dacee435
 DIST PyRSS2Gen-1.1.tar.gz 9149 SHA256 2a9a3ee7c8e30cb40434ef3a295f9a60166f7d8c3eaefac9f46f7ed4b27c2269 SHA512 2240686914c87984626eb739676927fcd53488158bdebf589e07e8a778e6d24305964e032581c61836f0fabc1264e42d05c88eac8f4c5f6536c31c775434ce02 WHIRLPOOL 4ee5f7fefc942600f00a07bd081bc2c0324c6e651d3008f591608dc537dceaf22029d887dd04360ef381975fcab12d8ed6fa5858c526c7c9467a475a48971a5d
 EBUILD PyRSS2Gen-1.0.0-r1.ebuild 572 SHA256 0ba7d36ec6b4383dabc5b81b0cfef0c2edee99f7d9ee7e05a894e74c53372121 SHA512 6c757d684d3d7319ea427a7cf29131ab12a5843a3d0c343e55d64bd495d7a83d49a0e57239d250eaa5ac95bd5ec268a5978eff170a156850a03c67c993815fbe WHIRLPOOL 06490a398e444c2d43ce37d6498992aaced32f4b54361ae240002c54936f8f8f22b4a2cf4e5b948eef6b1bd36be3d2a987fb54ec9c42138c8141477ce60e0bab
-EBUILD PyRSS2Gen-1.1.ebuild 566 SHA256 60a7bdff6990181dd48cf7f6359fb21a994db20e44a9eeb4649954a2b97da575 SHA512 767c458abbaadf7897636bda2d4d854befa683437d2bfda910080f593f32884ebf2f5ee5ea1f60e178485c7b31394971a13289e738328a9a8eac71a3e0d8ac29 WHIRLPOOL cb85f381cda3e1330ee2a9e11937a6cd32048bb0e021c1227023ca5231cd36b0b39fa328f458e1dc99f5c61f2750d59e906a605bd994d219015c6b687edad6a9
-MISC ChangeLog 1340 SHA256 8c7a8fe5945b23314ac83efb2cdec1c8b937ceee0faa49fb1737663be4c46d33 SHA512 bd784f878c3ee931568a7085092da8b4653a58a42e859e573bc88585c8dfcfc275ef8feca12c98a3ecc9a63fccf392e021170fdc71ca4dee78ea62dc97fb93b4 WHIRLPOOL 73e70114d07a38153fef0bd33e0606de0fe45db0bd682f3b554016de3bd338722cd387a568d1d0bcc00c64786c7c93455dcca0e056e6ff9cac087dd0c9d549f9
+EBUILD PyRSS2Gen-1.1.ebuild 563 SHA256 1ea5f0e7d437c018d4fd84f2523085edfb955daff1d4d27cef19518d7efb3b00 SHA512 3f83cdcbe94592e249a96868db37cb9f137f9bd872a3617f6e0274a326129297aaa1e24c8817e280b4b614e4db6f02d5b2d4ab4947812e39c6c97f1a2e6026d3 WHIRLPOOL 903f56583a27c758814636df27358317b830978f904f9bd01ea09772cadc97ef8be6f529ad005c240279423857160d3628ae9877bc2c8aa7dd5e378b2f4a6a29
+MISC ChangeLog 1436 SHA256 f2330e4c0d3b5f4593a8eda712a57037fe1c4621f19a2dedff8d85a801a04536 SHA512 c379482489b57e67ac4b26a4d21694e0e2cfb807c7156ff7fcca3c544c709652384e92825466071d8ec8da2044da3d1055e65aa1fb63699434bc68a7520513a4 WHIRLPOOL ce7658666c17e83f95fe1d501416de1ba5947900bf4775935c0716043220e6fda34dd30f31430e907f476b53c90c6d39f023066d2bf066fce485fd78bb055a85
 MISC metadata.xml 253 SHA256 ae89ee9516973ae367e7c4f6b4529e83ef448eb68a2e32d45466b4e5a7b21a90 SHA512 795fcc27c878825071cce953f25dfeea251796bb7f99f8fbdcf2ff38819e5d49d51dea17784a790759227f36aa225d9fb5c0f35ea684f1e35f072afd4dd8e044 WHIRLPOOL ddbfb7f9a4a2f0b04f5a9c0c1a9cbd500ac2347d32db418f1c5f62f120a2194ce5630a4f40d36cff3370267812013165da0c479343c580f9273e60c7b9d3d1e0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJU25zuAAoJEPGu1DbS6WIAcekP/jVASnziQvk8xICvBLk6NPw5
+25g4InpCU90+ugugXAdmK+/lSrYnsK0ep1+4wfBNrBjEV2rJwa+d4UGBkRlv7LGP
+7VunQYosQRrKs3+whtVHGLOgcoapmPxm7pig29P+YCL0eGzPQlvoqpLLMnPlNFX9
+aCCc4sKP1USfQYTLfyimy6QFw4ZQ3pakuIBmbhkVDRLJ9PWOEI7NZ/rTl0E3GO8d
+35szn8be9zEqoZzcePRt5mMbJ+gci6HERjk129Jka8C2IpRHUpa4ABW2Ls5oGjEX
+HTIM7rZRwOJaR7H/U2dottQv6sE6jY6kaoy2VK5bmDqN9PQDut19vtshfdhmUs3N
+fYljXQ2Cb651lefFOn7QY9XPNAEo1nkLOovNv2GnonxROVBW8SqInvarj0HJmqyf
+oqf5A2tgpV7VaDxcopkB1E3Et7ih3uwy5BV+7M6hQbQuBLOHYvu/KzkdBa5Ls7Do
+5CI5numoBz78Gpol04UCAbejg2fn5vnS8CDv02qRFwRLOXTymwpzzMSk18OK34/5
+Aa2iz8/vN2VBb9lQfRohPFkOYP7ABN89JUcaTjX1wiVNnhyoUeHd/7c8ekcALnG3
+X+xb+nzjbOjBUXZiPCAzzaqxn9i86DnYm5nfE/1LzHzT0v7yEoxoM+Z7AB96NQ+J
+QqZlzSBtY5teJTdekcE4
+=wnPH
+-----END PGP SIGNATURE-----
