@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/PyRSS2Gen
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/PyRSS2Gen/ChangeLog,v 1.9 2015/02/01 16:23:57 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/PyRSS2Gen/ChangeLog,v 1.10 2015/02/11 18:18:20 vapier Exp $
+
+  11 Feb 2015; Mike Frysinger <vapier@gentoo.org> PyRSS2Gen-1.1.ebuild:
+  Stabilize for all.
 
   01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -PyRSS2Gen-1.0.0.ebuild:
   Remove old.
